# cpg_go1_simulation_foot_traj

./: .gitignore  README.md  analyze_cpg_signals.py  analyze_foot_trajectories.py  break_time_demo.py  export_foot_trajectory.py  foot_cpg_guide.py  generate_enhanced_data.py  implementation_report.py  pyproject.toml  test_break_time.py  test_corrected_foot_cpg.py  test_enhanced_coupling.py  visualize_cpg.py
src/cpg_go1_simulation/stein/: __init__.py  foot_trajectory_cpg.py
