[project]
name = "cpg-go1-simulation"
version = "0.1.0"
description = "A Python package for simulating the CPG-GO1 model."
readme = "README.md"
authors = [
    { name = "Xiyan Liu", email = "dipsy@zju.edu.cn" },
    { name = "Yide Liu", email = "yide_liu@zju.edu.cn" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "pandas>=1.3.0",
    "pybullet==3.2.6",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "torch>=1.11.0",
    "tqdm>=4.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
